cmake_minimum_required(VERSION 2.8.7)
include_directories(include)

set(CMAKE_FIND_LIBRARY_PREFIXES "lib")
set(CMAKE_FIND_LIBRARY_SUFFIXES ".a")
find_package(OpenSSL QUIET)

project (udpserver)
add_executable(${CMAKE_PROJECT_NAME} "udpserver.c")
target_link_libraries(${CMAKE_PROJECT_NAME} progbase)
if(OPENSSL_FOUND)
    target_link_libraries(${CMAKE_PROJECT_NAME} ssl)
endif()

project (udpclient)
add_executable(${CMAKE_PROJECT_NAME} "udpclient.c")
target_link_libraries(${CMAKE_PROJECT_NAME} progbase)
if(OPENSSL_FOUND)
    target_link_libraries(${CMAKE_PROJECT_NAME} ssl)
endif()

project (tcpserver)
add_executable(${CMAKE_PROJECT_NAME} "tcpserver.c")
target_link_libraries(${CMAKE_PROJECT_NAME} progbase)
if(OPENSSL_FOUND)
    target_link_libraries(${CMAKE_PROJECT_NAME} ssl)
endif()

project (tcpclient)
add_executable(${CMAKE_PROJECT_NAME} "tcpclient.c")
target_link_libraries(${CMAKE_PROJECT_NAME} progbase)
if(OPENSSL_FOUND)
    target_link_libraries(${CMAKE_PROJECT_NAME} ssl)
endif()
